--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <br>
 <br> Parking assist device for drivers
 <br> For tight garages and parking spots
-<br> Easily align and park your car straight
+<br> Align and park your car straight easily
 <br> Designed and measured for long distance visibily
 <br> Guides the approach to a garage spot
 <br>
