--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <div class="topnav">Logo</div>
+
     <div class="divMaxWidth">
         <div class="mainPicture">
     
@@ -69,7 +69,7 @@
 <br><br><br><br><br><br><br><br><br><br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
-
+</div>
 
     <div class="newfooter">
     <div> AlignMateEntry LLC</div>
