updated added new image

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 <br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
 </div>
+<div class="secondImage">
+    
+</div>
 
     <div class="newfooter">
     <div> AlignMateEntry LLC</div>
