updated buttons and text

--- a/index.html
+++ b/index.html
@@ -56,14 +56,19 @@
 <br><br><br><br><br><br><br><b>
 
 
-<div style="font-size: 64px; font-weight: bold; text-align: center;">AlignMateEntry</div>
+<div style="font-size: 64px; font-weight: bold; text-align: center; text-shadow: rgb(255, 255, 255) 1px 0 30px;">AlignMateEntry</div>
 <div style="font-size: 25px; text-align: center;">
     Align centered before entering <br> a narrow parking spot
+    <br>
 </div>
-<div style="text-align: center;">
-<br> $199
+<div style="text-align: center; font-size: 40px; font-weight: 600; text-shadow: rgb(255, 255, 255) 1px 0 30px;">
+<br> $199 Full Length Video
+<br><br>
+<button style="font-size: 40px; border-radius: 30px; padding: 5px 90px; ">Buy Now</button>
+<br><br>
+<!-- <div>---</div> -->
 <br>
-<button>Pre-Order soon</button>
+<button style="font-size: 40px; border-radius: 30px; padding: 5px 15px; ">Pre-Order Product</button>
 <br>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br>
@@ -94,12 +99,12 @@
     <br> Parking assist device for drivers
     <br> For tight garages and parking spots
     <br> Align and park your car straight easily
-    <br> Designed and measured for long distance visibily
+    <br> Designed and measured for long distance visibility
     <br> Guides the approach to a garage spot
     <br> Attaches to the garage wall
     <br>
-    <br> $199
-    <button>Pre-Order soon</button>
+    <br>
+    <button>Pre-Order</button>
 <br><br>
 </div>
 
@@ -111,8 +116,8 @@
         <br>
         <br>
     <div> AlignMateEntry LLC</div>
-    <div> AlignMateEntry@gmail.com</div>
-    <div> Invented in 2021 </div>
+    <div>AlignMateEntry@gmail.com</div>
+    <div>Invented in 2021</div>
     <br>
     <br>
     <br>
