updated text layout images

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 <br><br><br><br><br><br><br><b>
 
 
-<div style="font-size: 64px; font-weight: bold; text-align: center; text-shadow: rgb(255, 255, 255) 1px 0 30px;">AlignMateEntry</div>
-<div style="font-size: 25px; text-align: center;">
+<div class="textBox1" style="font-family: Arial; text-align: center; text-shadow: rgb(255, 255, 255) 1px 0 30px;">AlignMateEntry</div>
+<div class="textBoxSubHeader" style=" text-align: center;">
     Align centered before entering <br> a narrow parking spot
     <br>
 </div>
-<div style="text-align: center; font-size: 40px; font-weight: 600; text-shadow: rgb(255, 255, 255) 1px 0 30px;">
-<br> $199 Full Length Video
-<br><br>
-<button style="font-size: 40px; border-radius: 30px; padding: 5px 90px; ">Buy Now</button>
+<div style="text-align: center; font-size: 25px; font-weight: 400; text-shadow: rgb(255, 255, 255) 1px 0 30px;">
+<br> $199 DIY Full Length Video
+<br>
+<button style="font-size: 25px; border-radius: 30px; padding: 5px 90px; ">Buy Now</button>
 <br><br>
 <!-- <div>---</div> -->
 <br>
-<button style="font-size: 40px; border-radius: 30px; padding: 5px 15px; ">Pre-Order Product</button>
+<button style="font-size: 25px; border-radius: 30px; padding: 5px 15px; ">Pre-Order Product</button>
 <br>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br>
@@ -79,19 +79,20 @@
  <div class="textBox2">
     <div class="secondImage"></div>
     <div class="textBox65">
-        For center alignment before entering parking spot <br>
+        For center alignment before entering parking spot
        <br> -Houses
         <br>-Townhouses
         <br> -Apartments
         <br> -Garages
         <br> -Office Buildings
+        <br>
     </div>
 
 </div>
  </div>
  </div>
 <br>
-<br>
+
 
 
 <div class="alignMateTop">
@@ -105,13 +106,14 @@
     <br>
     <br>
     <button>Pre-Order</button>
+<br> <br>
 <br><br>
 </div>
 
-<br><br>
+
 
     <div class="newfooter" style="background-color: lightgrey;">
-        <br>
+        
         <br>
         <br>
         <br>
