updated text and layout

--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
 </div>
 <!-- end Top Nav Bar -->
 
-<br><br><br><br><br><br><br><b>
+<br><br><br><br><br><br><br><br>
 
 
-<div class="textBox1" style="font-family: Arial; text-align: center; text-shadow: rgb(255, 255, 255) 1px 0 30px;">AlignMateEntry</div>
-<div class="textBoxSubHeader" style=" text-align: center;">
-    Align centered before entering <br> a narrow parking spot
-    <br>
+<div class="textBox1" style="padding-left: 50px; font-family: Arial; text-align: left; text-shadow: rgb(255, 255, 255) 1px 0 30px;">AlignMateEntry</div>
+<div class="textBoxSubHeader" style="padding-left: 50px;  text-align: left; font-size: 20px;">
+    <!-- Align centered before entering <br> a narrow parking spot -->
+
 </div>
-<div style="text-align: center; font-size: 25px; font-weight: 400; text-shadow: rgb(255, 255, 255) 1px 0 30px;">
-<br> $199 DIY Full Length Video
-<br>
-<button style="font-size: 25px; border-radius: 30px; padding: 5px 90px; ">Buy Now</button>
+<div style="padding-left: 50px; text-align: left; font-size: 20px; font-weight: 400; text-shadow: rgb(255, 255, 255) 1px 0 30px;">
+<br> $199 DIY Full Length Video  Guided <br>Installation Blueprint
+<br><br>
+<button style="font-size: 20px; border-radius: 30px; padding: 5px 20px; ">Buy Now</button>
 <br><br>
 <!-- <div>---</div> -->
 <br>
-<button style="font-size: 25px; border-radius: 30px; padding: 5px 15px; ">Pre-Order Product</button>
+<!-- <button style="font-size: 25px; border-radius: 30px; padding: 5px 15px; ">Pre-Order Product</button> -->
 <br>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br>
@@ -105,9 +105,9 @@
     <br> Attaches to the garage wall
     <br>
     <br>
-    <button>Pre-Order</button>
+    <!-- <button>Pre-Order</button> -->
 <br> <br>
-<br><br>
+
 </div>
 
 
