--- a/index.html
+++ b/index.html
@@ -56,15 +56,14 @@
 <br><br><br><br><br><br><br><br>
 
 
-<div class="textBox1" style="padding-left: 50px; font-family: Arial; text-align: left; text-shadow: rgb(255, 255, 255) 1px 0 30px;">AlignMateEntry</div>
-<div class="textBoxSubHeader" style="padding-left: 50px;  text-align: left; font-size: 20px;">
-    <!-- Align centered before entering <br> a narrow parking spot -->
-
+<div class="textBox1" style="padding-left: 50px; font-family: Arial; text-align: left; text-shadow: 0px 0px 5px white; font-size: 58px;">AlignMateEntry</div>
+<div class="textBoxSubHeader" style="padding-left: 50px;  text-align: left; font-size: 30px; text-shadow: 0px 0px 5px white;">Align centered before entering <br> a narrow parking spot
 </div>
-<div style="padding-left: 50px; text-align: left; font-size: 20px; font-weight: 400; text-shadow: rgb(255, 255, 255) 1px 0 30px;">
-<br> $199 DIY Full Length Video  Guided <br>Installation Blueprint
+<div style="padding-left: 50px; text-align: left; font-size: 30px; font-weight: 400; text-shadow: 0px 0px 5px white;">
+<br> $199 DIY Full Length <br>
+Video Guided   <br> Installation   <br>Blueprint
 <br><br>
-<button style="font-size: 20px; border-radius: 30px; padding: 5px 20px; ">Buy Now</button>
+<button style="font-size: 30px; border-radius: 30px; padding: 5px 20px; ">Buy Now</button>
 <br><br>
 <!-- <div>---</div> -->
 <br>
