--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 </div> -->
 <div style="padding-left: 30px; text-align: left; font-size: 30px; font-weight: 400; text-shadow: 0px 0px 5px white;">
 
+$199 DIY Full Length
+Video <br> Installation Guided Blueprint <br>
 
 <button style="font-size: 25px; border-radius: 30px; padding: 5px 30px; ">Buy Now</button>
 <br><br>
