--- a/index.html
+++ b/index.html
@@ -53,18 +53,19 @@
 </div>
 <!-- end Top Nav Bar -->
 
-<br><br><br><br><br><br><br>
+<br><br><br><br><br>
 
 
-<div class="textBox1" style="padding-left: 30px; font-family: Arial; text-align: left; text-shadow: 0px 0px 5px white; font-size: 55px;">AlignMateEntry</div>
+<div class="textBox1" style="padding-left: 50px; font-family: Arial; text-align: left; text-shadow: 0px 0px 5px white; font-size: 55px;">AlignMateEntry</div>
 <!-- <div class="textBoxSubHeader" style="padding-left: 30px;  text-align: left; font-size: 30px; text-shadow: 0px 0px 5px white;">Align centered before entering <br> a narrow parking spot
 </div> -->
-<div style="padding-left: 30px; text-align: left; font-size: 30px; font-weight: 400; text-shadow: 0px 0px 5px white;">
+<div style="padding-left: 50px; text-align: left; font-size: 30px; font-weight: 400; text-shadow: 0px 0px 5px white;">
+ Center Align Confidently <br><br>$199 Parking Assist Device <br> DIY Full Length <br>
+Video Installation <br>Blueprint<br> <br>
+<!-- $199 DIY Full Length <br>
+Video  Installation Guided Blueprint <br> -->
 
-$199 DIY Full Length
-Video <br> Installation Guided Blueprint <br>
-
-<button style="font-size: 25px; border-radius: 30px; padding: 5px 30px; ">Buy Now</button>
+<button style="font-size: 25px; border-radius: 30px; padding: 5px 30px; ">Buy Soon</button>
 <br><br>
 <!-- <div>---</div> -->
 <br>
@@ -83,7 +84,7 @@ Video <br> Installation Guided Blueprint <br>
         CONFIDENTLY CENTER <br><br>
         $199 DIY Full Length
         Video Installation Guided Blueprint <br><br>
-    <button style="font-size: 25px; border-radius: 30px; padding: 5px 30px; ">Buy Now</button>
+    <button style="font-size: 25px; border-radius: 30px; padding: 5px 30px; ">Buy Soon</button>
     <br>
 
     </div>
