--- a/index.html
+++ b/index.html
@@ -80,36 +80,35 @@ Video  Installation Guided Blueprint <br> -->
  <div class="textBox2">
     <div class="secondImage"></div>
     <div class="textBox65" style="font-weight: 800; font-size: 20px;">
+        <br> Center align confidently before
+        <br> entering a parking spot
         <br>
-        CONFIDENTLY CENTER <br><br>
-        $199 DIY Full Length
-        Video Installation Guided Blueprint <br><br>
-    <button style="font-size: 25px; border-radius: 30px; padding: 5px 30px; ">Buy Soon</button>
+        <br> -Houses/Townhouses
+        <br> -Office Buildings
+        <br> -Apartments
+        <br> -Garages <br><br>
+    <!-- <button style="font-size: 20px; border-radius: 30px; padding: 5px 30px; ">Buy Soon</button> -->
     <br>
 
     </div>
     </div>
  </div>
  </div>
+<br>
 
-<br><br>
 
 <div class="alignMateTop">
-    <br><br>
-    For center alignment before entering parking spot
-    <br> -Houses/Townhouses
-    <br> -Apartments
-    <br> -Garages
-    <br> -Office Buildings
-    <br><br>
-    <br> Parking assist device for drivers
-    <br> For tight garages and parking spots
-    <br> Align and park your car straight easily
+    
+   <br>
+
     <br> Designed and measured for long distance visibility
+    <br> Align and park your car straight easily
     <br> Guides the approach to a garage spot
+    <br> For tight garages and parking spots
+    <br> Parking assist device for drivers
     <br> Attaches to the garage wall
     <br><br>
-    <br>
+    
     <!-- <button>Pre-Order</button> -->
 <br> <br>
 
