--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Video  Installation Guided Blueprint <br> -->
     <div class="secondImage"></div>
     <div class="textBox65" style="font-weight: 800; font-size: 24px; padding: 0 60px;">
         <br><br>
-    A sleek, wall-mounted parking guide engineered for precision— <br><br>making tight garage parking effortless for discerning
+    A sleek, wall-mounted parking guide engineered for precision <br><br>making tight garage parking effortless for discerning
     homeowners and professionals <br><br>
     <!-- <button style="font-size: 20px; border-radius: 30px; padding: 5px 30px; ">Buy Soon</button> -->
     
