--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <link href="favicon2.png" rel="shortcut icon" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-    
+    <script type="text/javascript" src="app.js"></script>
     <link rel="stylesheet" href="style.css">
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -60,16 +60,29 @@
 <!-- <div class="textBoxSubHeader" style="padding-left: 30px;  text-align: left; font-size: 30px; text-shadow: 0px 0px 5px white;">Align centered before entering <br> a narrow parking spot
 </div> -->
 <div style="padding-left: 50px; text-align: left; font-size: 30px; font-weight: 400; text-shadow: 0px 0px 5px white;">
- Center Align Confidently <br><br>$199 Parking Assist Device <br> DIY Full Length <br>
-Video Installation <br>Blueprint<br> <br>
+ Center Align Confidently 
+ <!-- Get Perfect Parking<br>Every Time  -->
+ <br><br>DIY Blueprint & Guide <br>for Only $199
+ <br><br>
 <!-- $199 DIY Full Length <br>
 Video  Installation Guided Blueprint <br> -->
 
-<button style="font-size: 25px; border-radius: 30px; padding: 5px 30px; ">Buy Soon</button>
+<button  style="font-size: 25px; border-radius: 30px; padding: 5px 30px; ">Buy Soon</button>
 <br><br>
 <!-- <div>---</div> -->
 <br>
-<!-- <button style="font-size: 25px; border-radius: 30px; padding: 5px 15px; ">Pre-Order Product</button> -->
+<!-- onclick="openAlignMateBlueprint()" -->
+    <!-- <div id="AlignMateBlueprintID"
+        style=" margin: 0px 10%; height: 50px; display: none; border-radius: 20px; background-color: white; padding: 10px 10px 10px 10px; padding-bottom: 10px; text-align: center;">
+        <a style="text-align: left; font-size: 20px;" onclick="closeAlignMateBlueprint()"> X
+        </a>
+        <a href="https://drive.google.com/file/d/1YrD-7U6eC1uQS8tCyps6RySt0vbwuPnJ/view?usp=sharing"
+            style="color: blue; text-align: center; padding-left:20px ;">
+            <br>Pre-order
+            <input type="text"></input>
+        </a>
+    </div> -->
+    <br><br><br>
 <br>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br>
@@ -105,10 +118,9 @@ Video  Installation Guided Blueprint <br> -->
 
  <div class="textBox2">
     <div class="secondImage"></div>
-    <div class="textBox65" style="font-weight: 800; font-size: 24px; padding: 0 60px;">
+    <div class="textBox65" style="font-weight: 800; font-size: 32px; padding: 0 60px;">
         <br><br>
-    A sleek, wall-mounted parking guide engineered for precision <br><br>making tight garage parking effortless for discerning
-    homeowners and professionals <br><br>
+    A sleek, wall-mounted parking guide<br><br>Making tight garage parking effortless <br><br>
     <!-- <button style="font-size: 20px; border-radius: 30px; padding: 5px 30px; ">Buy Soon</button> -->
     
     </div>
