--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <!-- $199 DIY Full Length <br>
 Video  Installation Guided Blueprint <br> -->
 
-<a href="https://connect.intuit.com/portal/app/CommerceNetwork/view/scs-v1-0ad7d3ef5a464d6a9c27e94c01e3749eca1393ba5f584d4d809e7d10970b28c5dd68b5a33dd0438fb4a706a327d55e29?locale=EN_US">
+<a href="https://connect.intuit.com/portal/app/CommerceNetwork/view/scs-v1-0ad7d3ef5a464d6a9c27e94c01e3749eca1393ba5f584d4d809e7d10970b28c5dd68b5a33dd0438fb4a706a327d55e29?locale=EN_US" target="_blank" rel="noopener noreferrer">
 <button style="font-size: 25px; border-radius: 30px; padding: 5px 30px; ">Buy Now</button>
 </a>
 
