--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div style="padding-left: 50px; text-align: left; font-size: 30px; font-weight: 400; text-shadow: 0px 0px 5px white;">
  Center Align Confidently 
  <!-- Get Perfect Parking<br>Every Time  -->
- <br><br>DIY Blueprint & Guide <br>for Only $199
+ <br><br>DIY Blueprint Video Guide <br>for Only $199
  <br><br>
 <!-- $199 DIY Full Length <br>
 Video  Installation Guided Blueprint <br> -->
