--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <div style="padding-left: 50px; text-align: left; font-size: 30px; font-weight: 400; text-shadow: 0px 0px 5px white;">
  Center Align Confidently 
  <!-- Get Perfect Parking<br>Every Time  -->
- <br><br>DIY Full Length Blueprint Video Guide <br>for Only $199
+ <br><br>DIY Full Length Blueprint <br>Video Guide <br>for Only $199
  <br><br>
 <!-- $199 DIY Full Length <br>
 Video  Installation Guided Blueprint <br> -->
@@ -121,7 +121,7 @@ Video  Installation Guided Blueprint <br> -->
 
  <div class="textBox2">
     <div class="secondImage"></div>
-    <div class="textBox65" style="font-weight: 800; font-size: 32px; padding: 0 60px;">
+    <div class="textBox65" style="transform-origin: capitalize;font-weight: 800; font-size: 32px; padding: 0 60px;">
         <br><br>
     A sleek, wall-mounted parking guide<br><br>Making tight garage parking effortless <br><br>
     <!-- <button style="font-size: 20px; border-radius: 30px; padding: 5px 30px; ">Buy Soon</button> -->
