--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Video  Installation Guided Blueprint <br> -->
     style="position: fixed; bottom: 20px; left: 20px; right: 20px; background: #fff; border: 1px solid #ccc; padding: 20px; z-index: 9999; display: block; font-family: Arial, sans-serif; font-size: 14px;">
     <p>
         We use cookies to improve your experience on our site. By continuing, you agree to our use of cookies.
-        Read our <a style="font-size: 14px;" href="https://patrolpeakplanner.github.io/PatrolPeakPlanner/privacy-policy.html" target="_blank"
+        Read our <a style="font-size: 14px;" href="https://alignmateentry.github.io/AlignMateEntry-/privacy-policy.html" target="_blank"
             style="color: blue; text-decoration: underline;">Privacy
             Policy</a> for more information.
     </p>
