updated added FitCut Fat Loss Blueprint

--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
     <!-- Footer -->
     <footer class="newfooter"
         style="background-color: #ABA7A7; text-align: center; padding: 30px; font-family: Arial, sans-serif;">
+
+       
+            <a style="text-decoration: none; color: white;"
+                href="https://fortressglidecover.github.io/fortressGlideCover/index.html" target="_blank">Also explore our:
+
+                <div style="color: blue; text-decoration: underline;"> FitCut Fat Loss Test <br> View</div> </a>
+<br><br><br>
+
         <div>AlignMateEntry LLC</div>
         <div><a href="mailto:AlignMateEntry@gmail.com">AlignMateEntry@gmail.com</a></div>
         <div><a href="https://www.AlignMateEntry.com" target="_blank">www.AlignMateEntry.com</a></div>
