--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
        
             <a style="text-decoration: none; color: white;"
-                href="https://fortressglidecover.github.io/fortressGlideCover/index.html" target="_blank">Also explore our:
+                href="https://alignmateentry.github.io/AlignMateEntry-/FitCut.html" target="_blank">Also explore our:
 
                 <div style="color: blue; text-decoration: underline;"> FitCut Fat Loss Test <br> View</div> </a>
 <br><br><br>
