--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <!-- Info Strip -->
         <section
-            style="height: 120px; background-color: #ABA7A7; color: black; font-size: 30px; font-weight: 400; padding: 30px 10%; font-family: arial;">
+            style="height: 120px; background-color: #ABA7A7; color: black; font-size: 30px; font-weight: 400; padding: 30px 50px; font-family: arial;">
             <br>
             Making tight garage parking effortless
         </section>
@@ -101,10 +101,10 @@
         style="background-color: #ABA7A7; text-align: center; padding: 30px; font-family: Arial, sans-serif;">
 
        
-            <a style="text-decoration: none; color: white;"
-                href="https://alignmateentry.github.io/AlignMateEntry-/FitCut.html" target="_blank">Also explore our:
-
-                <div style="color: blue; text-decoration: underline;"> FitCut Fat Loss Test <br> View</div> </a>
+            <a style="text-decoration: none; font-size: 20px; color: white;"
+                href="https://alignmateentry.github.io/AlignMateEntry-/FitCut.html" target="_blank">
+<br>
+                <button style="font-size: 20px; background-color: lightgrey; color: black; border-radius: 30px; text-decoration: none; padding: 10px 20px;"> View FitCut Fat Loss Test </button> </a>
 <br><br><br>
 
         <div>AlignMateEntry LLC</div>
