--- a/FitCut.html
+++ b/FitCut.html
@@ -21,7 +21,7 @@
 
     <header class="hero">
         <br><br><br><br><br><br><br><br><br><br><br><br>
-        <h1>How Fast Can You Lose Fat?</h1>
+        <h1>Find Your Fat-Loss Formula: Take the Quiz to Unlock Your Best Method!</h1>
         <p>Take this 60-second quiz to find your best fat loss method for 3, 5, or 7 months.</p>
         <button style="border-radius: 30px;" onclick="startQuiz()">Take the Test</button>
         <br><br><br><br><br><br><br><br><br>
